@@ -406,6 +406,10 @@ Invert all the colours in the image, creating a negative.
 Remove all colour from the image.
 
 .TP
+\fB\-\-swapchannels\fR <c1c2>
+Swap colour channels c1 and c2. Valid channels are R, G and B \-\- for Red, Green and Blue channels respectively.
+
+.TP
 \fB\-\-exec\fR <command>
 Executes the specified command and waits for it to complete before continuing. The command line is formatted by \fBstrftime\fR.
 
