@@ -4,6 +4,7 @@ fswebcam-2010?
   - Enable libgd fontconfig support if avaiable. Default font is now "sans:10".
   - Add S561 compressed palette support.
   - Fix small memory leak in the logging system.
+  - Add option to swap colour channels in the image.
 
 fswebcam-20100622
   
